--- a/src/main/webapp/atualizarProduto.xhtml
+++ b/src/main/webapp/atualizarProduto.xhtml
@@ -9,7 +9,7 @@
 	<ui:define name="tituloJanela">Dados do produto</ui:define>
 	<ui:define name="conteudo">
 		<h:form id="form" enctype="multipart/form-data">
-			<p:growl id="msg" autoUpdate="true" life="3000" />
+			<p:growl id="msg" life="3000" />
 			<h:inputHidden value="#{produtoBean.produto.id}" />
 			<h:inputHidden value="#{produtoBean.produto.sku}" />
 			<h:inputHidden value="#{produtoBean.produto.dataCadastro}" />
