--- a/src/main/webapp/finalizarCompra.xhtml
+++ b/src/main/webapp/finalizarCompra.xhtml
@@ -26,7 +26,7 @@
     						    </p:column>
  
  							   <p:column headerText="Entrega">
-        						   <h:outputText value="#{transporte.id} dias uteis" />
+        						   <h:outputText value="#{transporte.dataEntrega} dias uteis" />
         						   
     						   </p:column>
 
