--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -13,8 +13,9 @@
 		<h:form id="form">
 			<p:dataGrid var="produto" value="#{produtoBean.lista}" columns="4"
 				layout="grid" rows="12" paginator="true" id="produto"
-				paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-				currentPageReportTemplate=" " rowsPerPageTemplate="8,16,32">
+				paginatorTemplate="{CurrentPageReport} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+				currentPageReportTemplate=" " paginatorPosition=""
+				rowsPerPageTemplate="8,16,32">
 				<p:panel style="text-align:center">
 					<h:panelGrid columns="1" style="width:100%">
 						<p:graphicImage style="width: 200px;height: 250px;"
