--- a/src/main/webapp/finalizarCompra.xhtml
+++ b/src/main/webapp/finalizarCompra.xhtml
@@ -35,7 +35,14 @@
 					
 					</div>
 					<div class="ui-g-3">
-					
+						<div style="text-align: center">
+							<p:panel>
+								<ul>
+									<li style="font-size: 1.2em; text-align: left;">TOTAL DA VENDA: R$
+										#{vendaBean.venda.valor}</li>									
+								</ul>
+							</p:panel>
+						</div>
 					</div>
 					<div style="float: rigt;" class="ui-g-3">
 						<p:panel>
