ADD(VendaController) salvarVendedor
Para quando a venda for diretamente na loja física

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -14,7 +14,7 @@
 			<p:dataGrid var="produto" value="#{produtoBean.lista}" columns="4"
 				layout="grid" rows="12" paginator="true" id="produto"
 				paginatorTemplate="{CurrentPageReport} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-				currentPageReportTemplate=" " paginatorPosition=""
+				currentPageReportTemplate=" "  paginatorPosition="bottom"
 				rowsPerPageTemplate="8,16,32">
 				<p:panel style="text-align:center">
 					<h:panelGrid columns="1" style="width:100%">
