--- a/src/main/webapp/listaProduto.xhtml
+++ b/src/main/webapp/listaProduto.xhtml
@@ -17,51 +17,59 @@
 				<p:menuitem url="cadastroProduto.xhtml?faces-redirect=true"
 					title="Adicionar" icon="pi pi-plus" />
 			</p:breadCrumb>
-			<p:dataTable id="tableProduto" var="produto"
-				value="#{produtoBean.lista}" frame="box" rules="all"
-				widgetVar="produtos" cellpadding="3" paginator="true"
-				paginatorTemplate="{FirstPageLink} {PreviousPageLink} {PageLinks} 
+			<div class="ui-g" style="height: 100%; margin-bottom: 0px;">
+			<h:panelGroup style="background:#696969;">
+				<div class="ui-g-1"></div>
+				<div class="ui-g-10">
+					<p:dataTable id="tableProduto" var="produto"
+						value="#{produtoBean.lista}" frame="box" rules="all"
+						widgetVar="produtos" cellpadding="3" paginator="true"
+						paginatorTemplate="{FirstPageLink} {PreviousPageLink} {PageLinks} 
 				{NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-				rowsPerPageTemplate="15,30,45">
-				<p:column headerText="Nome" filterBy="#{produto.nome}"
-					filterMatchMode="contains">
-					<h:outputText value="#{produto.nome}" />
-				</p:column>
-				<p:column headerText="SKU" filterBy="#{produto.sku}"
-					filterMatchMode="contains">
-					<h:outputText value="#{produto.sku}" />
-				</p:column>
-				<p:column headerText="EAN" filterBy="#{produto.EAN}"
-					filterMatchMode="contains">
-					<h:outputText value="#{produto.EAN}" />
-				</p:column>
-				<p:column headerText="Valor" filterBy="#{produto.valor}"
-					filterMatchMode="contains">
-					<h:outputText value="#{produto.valor}" />
-				</p:column>
-				<p:column headerText="Ativo" filterBy="#{produto.ativo}"
-					filterMatchMode="equals">
-					<f:facet name="filter">
-						<p:selectOneButton onchange="PF('produtos').filter()"
-							styleClass="custom-filter">
-							<f:converter converterId="javax.faces.Boolean" />
-							<f:selectItem itemLabel="+" itemValue="true" />
-							<f:selectItem itemLabel="-" itemValue="false" />
-						</p:selectOneButton>
-					</f:facet>
-					<h:outputText
-						value="#{produto.ativo == true ? 'Ativo' : 'Desativado'}" />
-				</p:column>
-				<p:column headerText="Alterar">
-					<p:commandButton action="#{produtoBean.alterar(produto)}"
-						value="Alterar" />
-				</p:column>
-				<p:column headerText="Excluir">
-					<p:commandButton action="#{produtoBean.excluir(produto)}"
-						onclick="if (!confirm('Confirma a exclusão da categoria?')) return false"
-						value="Excluir" />
-				</p:column>
-			</p:dataTable>
+						rowsPerPageTemplate="15,30,45" paginatorPosition="bottom">
+						<p:column headerText="Nome" filterBy="#{produto.nome}"
+							filterMatchMode="contains">
+							<h:outputText value="#{produto.nome}" />
+						</p:column>
+						<p:column headerText="SKU" filterBy="#{produto.sku}"
+							filterMatchMode="contains">
+							<h:outputText value="#{produto.sku}" />
+						</p:column>
+						<p:column headerText="EAN" filterBy="#{produto.EAN}"
+							filterMatchMode="contains">
+							<h:outputText value="#{produto.EAN}" />
+						</p:column>
+						<p:column headerText="Valor" filterBy="#{produto.valor}"
+							filterMatchMode="contains">
+							<h:outputText value="#{produto.valor}" />
+						</p:column>
+						<p:column headerText="Ativo" filterBy="#{produto.ativo}"
+							filterMatchMode="equals">
+							<f:facet name="filter">
+								<p:selectOneButton onchange="PF('produtos').filter()"
+									styleClass="custom-filter">
+									<f:converter converterId="javax.faces.Boolean" />
+									<f:selectItem itemLabel="+" itemValue="true" />
+									<f:selectItem itemLabel="-" itemValue="false" />
+								</p:selectOneButton>
+							</f:facet>
+							<h:outputText
+								value="#{produto.ativo == true ? 'Ativo' : 'Desativado'}" />
+						</p:column>
+						<p:column headerText="Alterar">
+							<p:commandButton action="#{produtoBean.alterar(produto)}"
+								value="Alterar" />
+						</p:column>
+						<p:column headerText="Excluir">
+							<p:commandButton action="#{produtoBean.excluir(produto)}"
+								onclick="if (!confirm('Confirma a exclusão da categoria?')) return false"
+								value="Excluir" />
+						</p:column>
+					</p:dataTable>
+				</div>
+				</h:panelGroup>
+				<div class="ui-g-1"></div>
+			</div>
 		</h:form>
 	</ui:define>
 </ui:composition>
