--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -26,7 +26,7 @@ html, body {
 		<h:form id="form">
 			<p:growl id="msg" autoUpdate="true" life="3000" />
 			<p:panel style="width: 1340px;height: 450px;text-align: center;">
-			<p:commandLink action="index.xhtml?faces-redirec=true">  
+			<p:commandLink immediate="true" action="index.xhtml??faces-redirect=true">  
 				<p:graphicImage style="float:center ;width: 200px;height:200px;"
 					library="imagem" name="logoN.png" />
 				</p:commandLink>	
@@ -41,7 +41,9 @@ html, body {
 				<br />
 				<br />
 				<p:commandButton style="padding: 5px 5px;border: 10px;margin:5px;"
-					update="@form" value="Entrar" action="#{UsePessoaBean.login()}" />
+					update="@form" value="Criar conta" immediate="true" action="cadastroClienteSite.xhtml?faces-redirect=true" />
+				<p:commandButton style="padding: 5px 5px;border: 10px;margin:5px;"
+					update="@form" value="Acessar" action="#{UsePessoaBean.login()}" />
 			</p:panel>
 		</h:form>
 		<div id="footer">
