--- a/src/main/webapp/visualizarProduto.xhtml
+++ b/src/main/webapp/visualizarProduto.xhtml
@@ -55,8 +55,15 @@
 								style="margin-center:20px;"
 								action="#{itemCarrinhoBean.salvar(produtoBean.produto, UsePessoaBean.cliente)}"
 								update="@form:growl" />
+							<br />
+							<br />
+						    <p:commandButton value="Avaliação"
+									         style="margin-center:20px;"
+									         action="#{avaliacaoBean.avaliar(produtoBean.produto)}"
+									         update="@form:growl" />
 						</p:panel>
 					</div>
+					
 				</div>
 			</p:panel>
 		</h:form>
