--- a/src/main/webapp/comprasCliente.xhtml
+++ b/src/main/webapp/comprasCliente.xhtml
@@ -12,49 +12,66 @@
 	<ui:define name="conteudo">
 		<h:form id="form">
 			<p:growl id="msg" autoUpdate="true" life="3000" />
-			<p:panel>
-				<p>#{UsePessoaBean.cliente.nome}, aqui você encontra todos seus
-					pedidos, use os filtros para poder encontrar o pedido que deseja ver</p>
-			</p:panel>
-			<p:dataTable id="tableProduto" var="venda" value="#{vendaBean.listaCliente(UsePessoaBean.cliente)}"
-				frame="box" rules="all" widgetVar="vendas" cellpadding="3"
-				paginator="true"
-				paginatorTemplate="{FirstPageLink} {PreviousPageLink} {PageLinks} 
+			<h:panelGroup
+				rendered="#{vendaBean.listaCliente(UsePessoaBean.cliente).size() > 0}">
+				<p:panel>
+					<p>#{UsePessoaBean.cliente.nome}, aqui você encontra todos seus
+						pedidos, use os filtros para poder encontrar o pedido que deseja
+						ver</p>
+				</p:panel>
+				<p:dataTable id="tableProduto" var="venda"
+					value="#{vendaBean.listaCliente(UsePessoaBean.cliente)}"
+					frame="box" rules="all" widgetVar="vendas" cellpadding="3"
+					paginator="true"
+					paginatorTemplate="{FirstPageLink} {PreviousPageLink} {PageLinks} 
 				{NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-				rowsPerPageTemplate="15,30,45">
-				<p:column headerText="Número do pedido" filterBy="#{venda.id}"
-					filterMatchMode="contains">
-					<h:outputText value="#{venda.id}" />
-				</p:column>
-				<p:column headerText="Data" filterBy="#{venda.dataCadastro}"
-					filterMatchMode="contains">
-					<h:outputText value="#{venda.dataCadastro}" />
-				</p:column>
-				<p:column headerText="Transporte" filterBy="#{venda.transporte.nome}"
-					filterMatchMode="contains">
-					<h:outputText value="#{venda.transporte.nome}" />
-				</p:column>
-				<p:column headerText="Valor" filterBy="#{venda.valor}"
-					filterMatchMode="contains">
-					<h:outputText value="#{venda.valor}" />
-				</p:column>
-				<p:column headerText="Entregue" filterBy="#{venda.entrega}"
-					filterMatchMode="equals">
-					<f:facet name="filter">
-						<p:selectOneButton onchange="PF('vendas').filter()"
-							styleClass="custom-filter">
-							<f:converter converterId="javax.faces.Boolean" />
-							<f:selectItem itemLabel="Sim" itemValue="true" />
-							<f:selectItem itemLabel="Não" itemValue="false" />
-						</p:selectOneButton>
-					</f:facet>
-					<h:outputText value="#{venda.entrega== true ? 'Sim' : 'Não'}" />
-				</p:column>
-				<p:column headerText="Pedido">
-					<p:commandButton action="#{vendaBean.selecionar(venda)}"
-						value="Ver" />
-				</p:column>
-			</p:dataTable>
+					rowsPerPageTemplate="15,30,45">
+					<p:column headerText="Número do pedido" filterBy="#{venda.id}"
+						filterMatchMode="contains">
+						<h:outputText value="#{venda.id}" />
+					</p:column>
+					<p:column headerText="Data" filterBy="#{venda.dataCadastro}"
+						filterMatchMode="contains">
+						<h:outputText value="#{venda.dataCadastro}" />
+					</p:column>
+					<p:column headerText="Transporte"
+						filterBy="#{venda.transporte.nome}" filterMatchMode="contains">
+						<h:panelGroup rendered="#{venda.transporte != null}">
+							<h:outputText value="#{venda.transporte.nome}" />
+						</h:panelGroup>
+						<h:panelGroup rendered="#{venda.transporte == null}">
+							<h:outputText value="Retirado na loja" />
+						</h:panelGroup>
+					</p:column>
+					<p:column headerText="Valor" filterBy="#{venda.valor}"
+						filterMatchMode="contains">
+						<h:outputText value="#{venda.valor}" />
+					</p:column>
+					<p:column headerText="Entregue" filterBy="#{venda.entrega}"
+						filterMatchMode="equals">
+						<f:facet name="filter">
+							<p:selectOneButton onchange="PF('vendas').filter()"
+								styleClass="custom-filter">
+								<f:converter converterId="javax.faces.Boolean" />
+								<f:selectItem itemLabel="Sim" itemValue="true" />
+								<f:selectItem itemLabel="Não" itemValue="false" />
+							</p:selectOneButton>
+						</f:facet>
+						<h:outputText value="#{venda.entrega== true ? 'Sim' : 'Não'}" />
+					</p:column>
+					<p:column headerText="Pedido">
+						<p:commandButton action="#{vendaBean.selecionar(venda)}"
+							value="Ver" />
+					</p:column>
+				</p:dataTable>
+			</h:panelGroup>
+			<h:panelGroup
+				rendered="#{vendaBean.listaCliente(UsePessoaBean.cliente).size() == 0}">
+				<p:panel>
+				<h3>Você ainda não fez nenhum pedido</h3>
+				
+				</p:panel>
+			</h:panelGroup>
 		</h:form>
 	</ui:define>
 </ui:composition>
