--- a/src/main/webapp/finalizarCompra.xhtml
+++ b/src/main/webapp/finalizarCompra.xhtml
@@ -40,7 +40,7 @@
 					</div>
 					<div style="float: rigt;" class="ui-g-3">
 						<p:panel>
-							<h:outputLabel value="Transportadora " for="spi" />
+							<h:outputLabel value="Transportadora " for="transporte" />
 							<p:selectOneMenu id="transporte"
 								value="#{vendaBean.venda.transporte.id}">
 								<f:selectItem itemLabel="Selecione uma opção" itemValue=""
@@ -52,7 +52,7 @@
 							<br></br>
 							<p:commandButton value="Finalizar Pedido" id="add"
 								style="margin-center:20px;" update="@form"
-								action="#{vendaBean.salvar(UsePessoaBean.cliente)}" />
+								action="#{vendaBean.salvar(UsePessoaBean)}" />
 						</p:panel>
 					</div>
 				</div>
