UPDATE(VendaController) salvar
retorno para tela do pedido

--- a/src/main/webapp/finalizarCompra.xhtml
+++ b/src/main/webapp/finalizarCompra.xhtml
@@ -15,6 +15,7 @@
 	<ui:define name="conteudo">
 		<h:form id="form">
 			<p:panel>
+				<p:growl id="growl" showDetail="true" life="1000" />
 				<div class="ui-g">
 					<div style="float: center" class="ui-g-6">
 						<div style="text-align: center">
